--- a/config/reviung41.conf
+++ b/config/reviung41.conf
@@ -2,4 +2,4 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_POINTING=y
-CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+# CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
