optimise hold-tap behaviours

--- a/config/behaviors.dtsi
+++ b/config/behaviors.dtsi
@@ -49,7 +49,6 @@ HRM(hrmrs, LEFT_KEYS, 0)
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             flavor = "tap-preferred";
-            tapping-term-ms = <300>;
             quick-tap-ms = <QUICK_TAP_TERM>;
             bindings = <&kp>, <&kp>;
             require-prior-idle-ms = <PRIOR_IDLE>;
@@ -63,10 +62,10 @@ HRM(hrmrs, LEFT_KEYS, 0)
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             flavor = "tap-preferred";
-            tapping-term-ms = <300>;
             quick-tap-ms = <QUICK_TAP_TERM>;
             bindings = <&mmv>, <&mmv>;
             require-prior-idle-ms = <PRIOR_IDLE>;
+            hold-while-undecided;
         };
     };
 };
