caps word continues on backspace & delete

--- a/config/behaviors.dtsi
+++ b/config/behaviors.dtsi
@@ -7,7 +7,7 @@
 
 // CAPS WORD
 &caps_word {
-    continue-list = <UNDERSCORE MINUS>;
+    continue-list = <UNDERSCORE MINUS DELETE BACKSPACE>;
 };
 
 // MOD MORPHS
